# ComponentDemo

./: build.gradle  gradle.properties  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
key/: Component2022.jks
modulesBase/libBase/: build.gradle
modulesCore/ffmpeg/: build.gradle
modulesCore/ffmpeg/src/main/cpp/: AudioChannel.cpp  AudioChannel.h  BaseChannel.h  CMakeLists.txt  JavaCallHelper.cpp  JavaCallHelper.h  PlayerFFmpeg.cpp  PlayerFFmpeg.h  Test.h  VideoChannel.cpp  VideoChannel.h  ffmpeg.cpp  logutil.h  safe_queue.h
modulesCore/ffmpeg/src/main/debug/: AndroidManifest.xml
modulesCore/ffmpeg/src/main/res/layout/: activity_ffmpag.xml
modulesCore/jucdemo/: build.gradle
modulesCore/jucdemo/src/main/: AndroidManifest.xml
modulesCore/jucdemo/src/main/res/values/: strings.xml
modulesCore/lifecycle/: build.gradle
modulesCore/lifecycle/src/main/: AndroidManifest.xml
modulesCore/lifecycle/src/main/debug/: AndroidManifest.xml
modulesCore/lifecycle/src/main/res/layout/: activity_main.xml
modulesCore/livedata/: build.gradle
modulesCore/livedata/src/main/: AndroidManifest.xml
modulesCore/livedata/src/main/debug/: AndroidManifest.xml
modulesCore/livedata/src/main/res/layout/: activity_live_data.xml  activity_live_data_for_map.xml  activity_live_data_for_switch_map.xml
modulesCore/login/: build.gradle
modulesCore/login/src/main/: AndroidManifest.xml
modulesCore/login/src/main/debug/: AndroidManifest.xml
modulesCore/login/src/main/res/layout/: activity_login.xml
modulesCore/main/: build.gradle
modulesCore/main/src/main/: AndroidManifest.xml
modulesCore/main/src/main/debug/: AndroidManifest.xml
modulesCore/main/src/main/res/layout/: activity_main.xml
modulesCore/room/: build.gradle
modulesCore/room/src/main/: AndroidManifest.xml
modulesCore/room/src/main/debug/: AndroidManifest.xml
modulesCore/viewbinding/: build.gradle
modulesCore/viewbinding/src/main/: AndroidManifest.xml
modulesCore/viewbinding/src/main/debug/: AndroidManifest.xml
modulesCore/viewbinding/src/main/res/layout/: activity_fragment.xml  fragment_left.xml  fragment_right.xml
modulesCore/viewmodel/: build.gradle
modulesCore/viewmodel/src/main/debug/: AndroidManifest.xml
modulesCore/viewmodel/src/main/res/layout/: activity_fragment.xml  activity_view_model.xml  fragment_left.xml  fragment_right.xml
modulesPublic/modulePay/: build.gradle
modulesPublic/modulePay/src/main/: AndroidManifest.xml
(+66 files in other folders)
